trunk/Archive/f688a23a6faea78f22539597f1a8b6e7-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:17: error: ‘INT_MAX’ was not declared in this scope
     double v1 = INT_MAX;
                 ^
